style.css
.jumbotron {
    margin-top: 10px;
    min-height: 300px;
    background-size: cover;
    background-color: #337ab7;
    padding-top:0;
    text-align: left;
    color: white;
    box-shadow: 0 8px 16px -6px rgb(255, 255, 255);
  }

  .jumbotron>.h1 {
    margin-top: 120px;
    font-family: Arial;
    text-align: center;
    font-size: 40px;
    font-weight: 540;
    line-height: 1.2;
  }
  /* About */
  .about {
    font-size: 18px;
    font-family: Arial;
    color: rgb(0, 0, 0);
    line-height: 1.7;
    text-align: justify;
    text-justify: inter-word;
    padding-right: 30px;
    background-color: rgb(255, 255, 255);
    padding: 20px;
    

  }

  .link {
    font-size: 18px;
    font-family: Arial;
    color: rgb(0, 0, 0);
    font-weight: 600;
    line-height: 1.7;
  }
body {
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 14px;
    background-image:url(static/img/bacteria1.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    line-height: 1.42857143;
    color: rgb(255, 255, 255);
    
    
}
  
  .title {
    font-family: Arial;
    color: rgb(255, 255, 255);
    margin-top: 0px;
    background-color: rgb(0, 0, 0);
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 20px;
    width: 1170px;
  }

  /* About Deshboard */
  .aboutdeshboard {
    font-size: 18px;
    font-family: Arial;
    color: rgb(0, 0, 0);
    line-height: 1.7;
    background-color: rgb(255, 255, 255);
    text-align: justify;
    text-justify: inter-word;
    padding-left: 15px;
    padding-right: 15px;
    margin-bottom: 0px;
    padding: 20px;
    border-radius: 25px;
  }

  /* Menu and Demographics */
  .menustyle {
    box-shadow: 0 8px 14px -6px rgb(74, 74, 74);
    padding: 20px;
    border-radius: 25px;
    height: 135px;
  }

  .menutitle {
    font-family: Arial;
    font-size: 16px;
    color: rgb(3, 3, 3);
    text-align: center;
    font-weight: 500;
    margin-bottom: 30px;
  }

  .dropdown {
    font-family: Arial;
    font-size: 16px;
    color: rgb(80, 80, 80);
    padding: 5px;
    margin-left: 28px;
  }

  .panelstyle {
    border-color: rgb(206, 206, 206);
    box-shadow: 0 8px 14px -6px rgb(74, 74, 74);
    padding: 0px;
    margin-top: 31px;
  }

  .panel-primary>.panel-heading {
    height: 55px;
    background-color: #337ab7;
    border-bottom-color: rgb(255, 255, 255);
    text-align: center;
    padding: 15px;
  }

  .panel-title {
    font-family: Arial;
    font-size: 16px;
    font-weight: 500;
    color: rgb(255, 255, 255);
    line-height: 1.7;
    
  }

  .panel-body {
    font-family: Arial;
    font-size: 15px;
    height: 320px;
    width: 170px;
    line-height: 1.5;
    font-weight: 400;
    color: rgb(0, 0, 0);
    padding-bottom: 0px;
    
  }

  /* Charts */
  .chartbox {
    box-shadow: 0 8px 14px -6px rgb(74, 74, 74);
    padding: 20px;
    padding-bottom: 25px;
    border-radius: 25px;
    
  }

  .gaugebox {
    background-color: white;
    padding: 10px;
    padding-top: 100px;
    padding-bottom: 8px;
    height: 605px;

  }

  /* Dashboard */
  .dashboardrow1 {
    margin-top: 30px;
    margin-bottom: 10px;
  }

  .dashboardrow2 {
    margin-top: 10px;
    margin-bottom: 150px;
  }

  /* Footer */
  .footerstyle {
    right: 0;
    bottom: 0;
    left: 0;
    padding: 15px;
    background: rgb(240, 240, 240);
    font-size: 15px;
    color: black;
    font-family: Arial;
    text-align: center;
  }

  .footcolor {
    color: rgb(133, 133, 133);
  }

